Fix top navigation bar CV button on small screens

--- a/components/buttons/outlineBtn.module.css
+++ b/components/buttons/outlineBtn.module.css
@@ -1,10 +1,9 @@
 .outlineBtn{
     @apply outline-none cursor-pointer py-4 px-8 border border-brand
-    bg-transparent text-brand text-sm rounded-b relative z-20 overflow-hidden transition-colors
+    bg-transparent text-brand text-sm rounded relative z-20 overflow-hidden transition-colors
     delay-75;
 
 }
-
 .svgBackground{
     display: none;
 }
@@ -23,9 +22,9 @@
     @apply left-0 top-0;
 }
 
-@media (max-width: 420px){
+@media (max-width: 486px){
     .outlineBtn{
-        @apply text-[0px] p-8;
+        @apply text-[0px] p-4;
     }
     .svgBackground{
         @apply block;
